--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <!-- Your code here -->
-  </body>
+    <img src="https://www.pinterest.com/aimeesmith6477/pictures-of-simba/" alt="Picha za simba"
+    title="Pictures of simba">
+
+    </body>
 </html>
